# SurrealEvent

./: ._README.md  .gitignore  CPC_slurm.sh  EfficientConvLSTM_README.md  example_persistent_augmentations.py  model_size_analysis.py  my_apptainer.def  pyproject.toml  pyproject3.12.toml  pyproject3.9.toml  slurm.sh  slurm_corruption.sh  slurmfinetuning.sh  test_efficient_model.py  test_persistent_noise.py
src/: ._main.py  ._main_CPC.py  T-sne.py  config.py  finetuning.py  live_stream.py  main.py  main_CPC.py  modelsize.py  show_data.py
src copy/: T-sne.py  config.py  live_stream.py  main.py  show_data.py
src copy/models/: BOBVEG.py  BOBW.py  ConvLSTM.py  MobileNetSurreal.py
src copy/utils/: dataloader.py  dataviewers.py  nn_utils.py
src/models/: ._BOBW_CPC.py  BOBVEG.py  BOBW.py  BOBW_CPC.py  ConvLSTM.py  EfficientConvLSTM.py  EventSegFast.py  EventSegUltraLight.py  EventSurreal.py  EventSurrealLayers.py  MobileNetSurreal.py  MobileNetSurrealLSTM.py  MobileNetSurrealLSTM_DEP.py  TransformerEventSurreal.py  TransformerMobileNetSurreal.py  UnetSurreal.py
src/results_processing/: error_plots.py  plot_images.py
src/utils/: ._dataloader.py  dataloader.py  dataviewers.py  functions.py  h5_to_videos.py  nn_utils.py  persistent_noise.py  plot_utils.py
