[project]
name = "surreal3.12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "numpy<2.0",
    "h5py>=3.14.0",
    "tqdm>=4.67.1",
    "lpips>=0.1.4",
    "scikit-learn>=1.7.1",
    "plotly>=6.2.0",
    "ignite>=1.1.0",
    "pytorch-ignite>=0.5.2",
    "matplotlib>=3.10.3",
]
